--- a/src/styles.scss
+++ b/src/styles.scss
@@ -32,7 +32,8 @@ p,
 td,
 form,
 select,
-output {
+output,
+button {
   margin: 0;
   font-family: variables.$sans;
   color: variables.$fontcolor1;
