--- a/src/app/components/general/contentbox/contentbox.component.scss
+++ b/src/app/components/general/contentbox/contentbox.component.scss
@@ -110,6 +110,10 @@
             grid-area: belowbottom;
             background-color: transparent;
             border-top: none;
+
+            & .locked {
+                padding: variables.$elem-padding;
+            }
         }
     }
 }
