--- a/src/app/components/general/skills/skill-item/skill-item.component.html
+++ b/src/app/components/general/skills/skill-item/skill-item.component.html
@@ -1,8 +1,7 @@
 <div [class]="
-    (showPercent ? 'percent-' + skill.knowledgepercent: '')+' flex-row-nojust pill skill-item'
-  " (mouseenter)="showTooltip = true" (mouseleave)="showTooltip = false">
-  <app-tooltip [visible]="showTooltip" [name]=" skillText" [icon]="skill.icon" [description]="skill.description"
-    [direction]="direction.BOTTOM" [link]="
+    (showPercent ? 'percent-' + skill.knowledgepercent: '')+' flex-row-nojust pill skill-item'">
+  <app-tooltip [name]=" skillText" [icon]="skill.icon" [description]="skill.description" [direction]="direction.BOTTOM"
+    [link]="
     skill.url
       ? {
           id: 'link_for_' + skill.identifier,
