--- a/src/app/components/views/career/career.component.html
+++ b/src/app/components/views/career/career.component.html
@@ -22,16 +22,13 @@
           <td class="right">{{career.dateto | pipeDate}}</td>
         </tr>
       </table>
-      <ng-container *ngVar="{value:false} as showTooltip">
-        <div class="hov" (mouseenter)="showTooltip.value = true" (mouseleave)="showTooltip.value = false">
-          <app-tooltip [visible]="showTooltip.value"
-            [name]="'Basis 42-Stunden-Woche minus Wochenende, 10T Feiertage und 36T Ferien pro Jahr'"
-            [description]="'(Gesamtzeit Beginn bis Ende) / (7 * 5) / (24 * (8.5 * pensum / 100)) / (36 * 35) / (10 * 9)'"
-            [direction]="d.TOP"></app-tooltip>
-          <p><b>Insgesamte Stunden geleistet</b></p>
-          <p>{{getDuration(career.datefrom, career.dateto, career.pensum)}}</p>
-        </div>
-      </ng-container>
+      <div class="hov">
+        <app-tooltip [name]="'Basis 42-Stunden-Woche minus Wochenende, 10T Feiertage und 36T Ferien pro Jahr'"
+          [description]="'(Gesamtzeit Beginn bis Ende) / (7 * 5) / (24 * (8.5 * pensum / 100)) / (36 * 35) / (10 * 9)'"
+          [direction]="d.TOP"></app-tooltip>
+        <p><b>Insgesamte Stunden geleistet</b></p>
+        <p>{{getDuration(career.datefrom, career.dateto, career.pensum)}}</p>
+      </div>
     </div>
     <ng-container bottom>
       <div class="bot bottomLinks default-grid">
