--- a/src/app/components/general/skills/skill-item/skill-item.component.html
+++ b/src/app/components/general/skills/skill-item/skill-item.component.html
@@ -1,6 +1,6 @@
 <div [class]="
     (showPercent ? 'percent-' + skill.knowledgepercent: '')+' flex-row-nojust pill skill-item'">
-  <app-tooltip [name]=" skillText" [icon]="skill.icon" [description]="skill.description" [direction]="direction.BOTTOM"
+  <app-tooltip [name]=" skillText" [icon]="skill.icon" [description]="skill.description" [direction]="direction.TOP"
     [link]="
     skill.url
       ? {
