i18n being easy as always /s

--- a/src/app/components/general/filter/filter.component.scss
+++ b/src/app/components/general/filter/filter.component.scss
@@ -80,7 +80,7 @@
                     position: absolute;
                     background-color: variables.$cool;
                     width: 100%;
-                    z-index: variables.$above-top;
+                    z-index: variables.$highest;
                     border-left: variables.$defborderthin;
 
                     //border-right: variables.$defborderthin;
