--- a/src/app/components/views/home/home.component.scss
+++ b/src/app/components/views/home/home.component.scss
@@ -87,6 +87,8 @@
                 @include screens.laptop-screen {
                     flex: 3;
                 }
+
+                margin:auto 0;
             }
         }
     }
