--- a/src/app/components/views/home/home.component.html
+++ b/src/app/components/views/home/home.component.html
@@ -2,33 +2,41 @@
 <div class="welcome default-grid">
   <div class="photo flex-center slimpill">
     <img src="{{ me.image.path }}" alt="{{ me.image.alt }}" loading="lazy" />
-    <svg id="svg-filter">
-      <filter id="svg-img-filter" x="-20%" y="-20%" width="140%" height="140%" filterUnits="objectBoundingBox"
-        primitiveUnits="userSpaceOnUse" color-interpolation-filters="linearRGB">
-        <feDisplacementMap in="SourceGraphic" in2="convolveMatrix2" scale="30" xChannelSelector="R" yChannelSelector="B"
-          x="0%" y="0%" width="500%" height="300%" result="displacementMap2" />
-        <feConvolveMatrix order="3 3" kernelMatrix="-3 0 0 
-    0 -3 0 
-    0 0 4" divisor="1" bias="1" targetX="0" targetY="0" edgeMode="duplicate" preserveAlpha="true" x="0%" y="0%"
-          width="500%" height="300%" in="displacementMap2" result="convolveMatrix3" />
-      </filter>
+    <svg *ngIf="!showFirst" id="svg-filter">
+      <svg id="svg-filter">
+        <filter id="svg-img-filter" x="-20%" y="-20%" width="140%" height="140%" filterUnits="objectBoundingBox"
+          primitiveUnits="userSpaceOnUse" color-interpolation-filters="linearRGB">
+          <feDisplacementMap in="SourceGraphic" in2="convolveMatrix2" scale="30" xChannelSelector="R"
+            yChannelSelector="B" x="0%" y="0%" width="500%" height="300%" result="displacementMap2" />
+          <feConvolveMatrix order="3 3" kernelMatrix="-3 0 0 
+      0 -3 0 
+      0 0 4" divisor="1" bias="1" targetX="0" targetY="0" edgeMode="duplicate" preserveAlpha="true" x="0%" y="0%"
+            width="500%" height="300%" in="displacementMap2" result="convolveMatrix3" />
+        </filter>
+      </svg>
     </svg>
-    <a *ngIf="!showFirst" style="font-size:1.5em;text-decoration:underline;margin-right:3em;"
-      href="https://open.spotify.com/track/5m1e0m3nIQ1lgxjZNm4I5z?si=ff92080664a44afc">Mysteriöser link</a>
-    <a *ngIf="!showFirst" style="font-size:1.5em;text-decoration:underline;margin-right:1.5em;"
-      href="https://open.spotify.com/track/0DPXhtJlA7qKrq2CjAPuiP?si=b6b889f215394ff0">Mysteriöser link</a>
-    <a *ngIf="!showFirst" style="font-size:1.5em;text-decoration:underline;"
-      href="https://open.spotify.com/track/3821fqXQU1myEolEYy8VRC?si=bf44b29c6f8a478b">Mysteriöser link</a>
-    <a *ngIf="!showFirst" style="font-size:1.5em;text-decoration:underline;margin-left:3em;"
-      href="https://open.spotify.com/track/3B6bxYkDG7SH3T93rETpc1?si=e2136f3574fe4096">Mysteriöser link</a>
+    <svg *ngIf="showFirst" id="svg-filter">
+      <svg id="svg-filter">
+        <filter id="svg-img-filter" x="-20%" y="-20%" width="140%" height="140%" filterUnits="objectBoundingBox"
+          primitiveUnits="userSpaceOnUse" color-interpolation-filters="linearRGB">
+          <feConvolveMatrix order="3 3" kernelMatrix="-3 0 0 
+      0 -3 0 
+      0 0 4" divisor="1" bias="1" targetX="0" targetY="0" edgeMode="duplicate" preserveAlpha="true" x="0%" y="0%"
+            width="500%" height="300%" in="displacementMap2" result="convolveMatrix3" />
+        </filter>
+      </svg>
+    </svg>
+
+    <ng-container *ngIf="!showFirst">
+      <a *ngFor="let link of mysteriousLinks; let i = index" [href]="link" class="mysterious"
+        [style]="'font-size:1.5em;text-decoration:underline;margin-right:calc(3em - '+i+'em);'">mysteriöser link</a>
+    </ng-container>
   </div>
   <div class="desc slimpill">
-    <h3>{{'Hallihallo!' | translate | async}}</h3>
-    <p>{{'Herzlich willkommen auf meiner Portfolio-Webseite! Fragst du dich gerade:' | translate | async}}
-    </p>
-    <h4>{{'Wer ich bin?' | translate | async}}</h4>
-    <p>{{'Ich heisse ' +me.firstname + ' ' +me.lastname + ' und bin ' | translate | async}} <span class="age">{{
-        me.birthdate | age:age}}</span> {{'alt.' | translate | async}}
+    <h3>Hallihallo!</h3>
+    <p>Herzlich willkommen auf meiner Portfolio-Webseite! Fragst du dich gerade: </p>
+    <h4>Wer ich bin?</h4>
+    <p>Ich heisse {{ me.firstname }} {{ me.lastname}} und bin <span class="age">{{ me.birthdate | age:age }}</span> alt.
     </p>
     <h4>Was ich tue?</h4>
     <p style="white-space: pre-line" (mouseenter)="showFirst = !showFirst">{{showFirst ? text1 : text2}}<a
@@ -36,7 +44,7 @@
       endText1 : endText2}}</p>
   </div>
   <div class="socials slimpill flex-row-just">
-    <h4 class="socialstext">{{'Erreichen kannst du mich hier:' | translate | async}}</h4>
+    <h4 class="socialstext">Erreichen kannst du mich hier:</h4>
     <app-button (click)="callMe()" [type]="lt.PHONE" name="Meine Telefonnummer"></app-button>
     <app-button (click)="mailMe()" [type]="lt.MAIL" name="Meine E-Mail"></app-button>
     <app-button (click)="myGithub()" [type]="lt.GITHUB" name="Mein Github Profil"></app-button>
